--- a/.travis.yml
+++ b/.travis.yml
@@ -206,7 +206,8 @@ before_install:
   - if [ -f /usr/bin/${CXX} ]; then export CXX=/usr/bin/${CXX}; fi
   - env
   - export TIMEMORY_SOURCE_DIRECTORY=${PWD}
-  - if [[ "$TRAVIS_PULL_REQUEST" != "false" || "${CONDA_OS}" != "MacOSX" ]]; then EXECUTE=1; else EXECUTE=0; fi;
+  # - if [[ "$TRAVIS_PULL_REQUEST" != "false" || "${CONDA_OS}" != "MacOSX" ]]; then EXECUTE=1; else EXECUTE=0; fi;
+  - EXECUTE=1
   - if [ -z "${CONDA_OS}" ]; then CONDA_OS=Linux; fi
   - if [ "${EXECUTE}" -ne 0 ]; then wget https://repo.continuum.io/miniconda/Miniconda3-latest-${CONDA_OS}-x86_64.sh -O miniconda.sh; fi
   - if [ "${EXECUTE}" -ne 0 ]; then bash miniconda.sh -b -p ${HOME}/miniconda; fi
