force inline removal + __init__.py + opaque updates
- fix to gotcha backend including base
- improved extern templates
- get_opaque in base class
- single timing extern
- string_view in opaque
- removed traceback from __init__.py

--- a/timemory/__init__.py.in
+++ b/timemory/__init__.py.in
@@ -31,7 +31,6 @@ import os
 import copy
 import atexit
 import platform
-import traceback
 
 __author__ = "Jonathan Madsen"
 __copyright__ = "Copyright 2020, The Regents of the University of California"
@@ -309,8 +308,12 @@ else:
 
     except Exception as e:
         print("Exception: {}".format(e))
-        exc_type, exc_value, exc_traceback = sys.exc_info()
-        traceback.print_exception(exc_type, exc_value, exc_traceback)
+        if platform.system() != "Darwin":
+            # traceback appears to cause deadlock for some reason
+            exc_type, exc_value, exc_traceback = sys.exc_info()
+            import traceback
+
+            traceback.print_exception(exc_type, exc_value, exc_traceback)
 
         from . import mpi_support
         from . import mpi
