--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -7,6 +7,10 @@ if(NOT DEFINED CTEST_TEST_TIMEOUT OR "${CTEST_TEST_TIMEOUT}" STREQUAL "")
     set(CTEST_TEST_TIMEOUT 180)
 endif()
 
+if(TIMEMORY_USE_COVERAGE)
+    add_compile_definitions(TIMEMORY_USE_COVERAGE)
+endif()
+
 set(_EXCLUDE)
 if(NOT TIMEMORY_BUILD_TESTING)
     set(_EXCLUDE EXCLUDE_FROM_ALL)
