--- a/examples/ex-gpu-roofline/CMakeLists.txt
+++ b/examples/ex-gpu-roofline/CMakeLists.txt
@@ -12,8 +12,8 @@ endif()
 project(timemory-GPU-Roofline-Example LANGUAGES C CXX CUDA)
 
 if(NOT CUDA_VERSION VERSION_LESS 11.0)
-    message(STATUS "[${PROJECT_NAME}] Skipping GPU roofline for CUDA ${CUDA_VERSION} (>= 11.0)")
-    message(WARNING "[${PROJECT_NAME}] CUPTI profiling API for HW counters not supported yet")
+    message(WARNING
+        "[${PROJECT_NAME}] CUPTI profiling API for HW counters not supported for CUDA ${CUDA_VERSION} (>= 11.0)")
     return()
 endif()
 
