--- a/timemory/__init__.py.in
+++ b/timemory/__init__.py.in
@@ -26,11 +26,6 @@
 #
 
 from __future__ import absolute_import
-import sys
-import os
-import copy
-import atexit
-import platform
 
 __author__ = "Jonathan Madsen"
 __copyright__ = "Copyright 2020, The Regents of the University of California"
@@ -41,13 +36,7 @@ __maintainer__ = "Jonathan Madsen"
 __email__ = "jrmadsen@lbl.gov"
 __status__ = "Development"
 
-try:
-    import cPickle as pickle
-except ImportError:
-    import pickle
-
-# get the path to this directory
-this_path = os.path.abspath(os.path.dirname(__file__))
+import os
 
 os.environ.setdefault("TIMEMORY_BANNER", "OFF")
 os.environ.setdefault("PROFILESELECTED", "1")
@@ -91,6 +80,8 @@ def __load_component_libs():
     relative_lib_path = "@LIB_RELPATH@"
     ext = None
 
+    import platform
+
     if platform.system().lower().startswith("darwin"):
         ext = "dylib"
     elif platform.system().lower().startswith("linux"):
@@ -99,6 +90,8 @@ def __load_component_libs():
         ext = "dll"
 
     def __load(name):
+        # get the path to this directory
+        this_path = os.path.abspath(os.path.dirname(__file__))
         p = os.path.realpath(os.path.join(this_path, relative_lib_path, name))
         if not os.path.exists(p):
             p = os.path.realpath(
@@ -109,6 +102,14 @@ def __load_component_libs():
         __load("libtimemory.{}".format(ext))
     except Exception as e:
         print(f"Error loading libtimemory: {e}")
+
+
+import sys
+
+try:
+    import cPickle as pickle
+except ImportError:
+    import pickle
 
 
 if os.environ.get("TIMEMORY_CXX_PLOT_MODE", None) is not None:
@@ -239,7 +240,7 @@ else:
 
         init = initialize
 
-        args = copy.copy(sys.argv)
+        args = sys.argv[:]
         try:
             while len(args) > 0 and len(args[0]) > 0 and args[0][0] == "-":
                 args.pop(0)
@@ -254,6 +255,8 @@ else:
             initialize(args)
 
         if os.environ.get("TIMEMORY_LIBRARY_DTOR", True):
+            import atexit
+
             atexit.register(finalize)
 
         settings.python_exe = "{}".format(sys.executable)
@@ -308,6 +311,8 @@ else:
 
     except Exception as e:
         print("Exception: {}".format(e))
+        import platform
+
         if platform.system() != "Darwin":
             # traceback appears to cause deadlock for some reason
             exc_type, exc_value, exc_traceback = sys.exc_info()
@@ -370,6 +375,8 @@ version = sys.modules[__name__].__getattribute__("version")
 
 # this is required for correct pickling
 try:
+    import platform
+
     if "line_profiler" not in sys.modules and platform.system() != "Darwin":
         from . import line_profiler as lineprof
 
