--- a/timemory/__init__.py.in
+++ b/timemory/__init__.py.in
@@ -377,7 +377,7 @@ version = sys.modules[__name__].__getattribute__("version")
 try:
     import platform
 
-    if "line_profiler" not in sys.modules and platform.system() != "Darwin":
+    if "line_profiler" not in sys.modules:
         from . import line_profiler as lineprof
 
         _lineprof = lineprof._line_profiler
