Disable macOS in CircleCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -155,4 +155,4 @@ workflows:
       - quick-build
       - cpu-dev-build
       # - gpu-dev-build
-      - macos-dev-build
+      # - macos-dev-build
