Bundle base operators + lldb deadlock test

--- a/source/python/CMakeLists.txt
+++ b/source/python/CMakeLists.txt
@@ -152,6 +152,7 @@ if(TIMEMORY_BUILD_PYTHON)
     message(STATUS "Adding source/python/tools...")
     add_subdirectory(tools)
 
+    # if(APPLE)
     if(APPLE AND "$ENV{TRAVIS}" STREQUAL "true")
         #
         file(WRITE ${PROJECT_BINARY_DIR}/.pdbrc
@@ -205,6 +206,21 @@ print('timemory imported')
         set_tests_properties(python-deadlock-trace PROPERTIES DEPENDS libpytimemory)
         set_tests_properties(python-deadlock-listfuncs PROPERTIES DEPENDS libpytimemory)
         set_tests_properties(python-deadlock-trackcalls PROPERTIES DEPENDS libpytimemory)
+
+        find_program(LLDB_EXE NAMES lldb)
+        if(LLDB_EXE)
+            file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/pylldb-run "run\nrun\n")
+            file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/pylldb-crash "bt")
+            add_test(
+                NAME                python-deadlock-lldb
+                COMMAND             ${LLDB_EXE} -b
+                                    -s ${CMAKE_CURRENT_BINARY_DIR}/pylldb-run
+                                    --source-on-crash ${CMAKE_CURRENT_BINARY_DIR}/pylldb-crash
+                                    --
+                                    ${PYTHON_EXECUTABLE} ${_FILE}
+                WORKING_DIRECTORY   ${PROJECT_BINARY_DIR})
+            set_tests_properties(python-deadlock-lldb PROPERTIES DEPENDS libpytimemory)
+        endif()
     endif()
 
 endif()
