utility::bit_flags + support for explicit push/pop via ctor
- fix to quirk_config in bundle::start and bundle::stop

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -35,7 +35,7 @@ jobs:
           git submodule update .
           module load anaconda
           module load likwid
-          module load cuda
+          module load cuda/10.2
           module list
           spack env activate timemory-ci
           spack load dyninst boost
