Fix test-python-install-import + properties specialized checks

--- a/cmake/Templates/test-python-install-import.cmake.in
+++ b/cmake/Templates/test-python-install-import.cmake.in
@@ -6,9 +6,18 @@ IF(NOT IS_ABSOLUTE "${INSTALL_PYTHONPATH}")
 ENDIF()
 GET_FILENAME_COMPONENT(INSTALL_PYTHONPATH "${INSTALL_PYTHONPATH}" DIRECTORY)
 
+SET(LIBPATH "@CMAKE_INSTALL_PREFIX@/@CMAKE_INSTALL_LIBDIR@")
+
 SET(ENV{TIMEMORY_BANNER} "OFF")
 SET(ENV{PYTHONPATH} "${INSTALL_PYTHONPATH}:${DEFAULT_PYTHONPATH}")
 MESSAGE(STATUS "PYTHONPATH: $ENV{PYTHONPATH}")
+
+IF(APPLE)
+    SET(ENV{DYLD_LIBRARY_PATH} "${LIBPATH}:$ENV{DYLD_LIBRARY_PATH}")
+    MESSAGE(STATUS "DYLD_LIBRARY_PATH: $ENV{DYLD_LIBRARY_PATH}")
+ELSEIF(UNIX)
+    MESSAGE(STATUS "LD_LIBRARY_PATH: $ENV{LD_LIBRARY_PATH}")
+ENDIF()
 
 EXECUTE_PROCESS(
     COMMAND @PYTHON_EXECUTABLE@ -c "import timemory; print('{}'.format(timemory.__file__))"
